Issue #3945: Fixed compile error on cygwin. (initializer element is not constant) Reviewed by Amaury Forgeot d'Arc.